@@ -6,6 +6,8 @@ MovieJukebox 1.0.16 beta
 ------------------------
   - Enhancement  #113 Single series pages. If the mjb.singleSeriesPage=true the separate season index is generated for each series.
   - Enhancement  #171 View & download internet movie trailers
+  - Enhancement  #231 Default skin details show TV episodes/parts list in compact form in order to avoid slow scrolling.
+                      The episode names are shown in the dynamic status bar by selecting particular episode.
   - Enhancement  #308 Plugin for German Database ofdb.de
   - Enhancement  #321 Episode list in reverse order
   - Fixed defect #332 International characters from NFO
@@ -61,8 +63,7 @@ MovieJukebox 1.0.16 beta
   - Fixed defect #561 Since R725 it ignored '.' as part keyword delimiter and accepted ' '; the behavior is now inverted
   - Fixed defect #573 Don't make safe filenames out of the trailer file URLs anymore
   - Fixed defect #576 Allow users to choose which characters get encoded and pick the escape character
-  - Enhancement  #231 Default skin details show TV episodes/parts list in compact form in order to avoid slow scrolling. 
-  					  The episode names are shown in the dynamic status bar by selecting particular episode (like on index page). 
+  - Fixed defect #591 Sratim plugin stopped downloading movie poster
 
 MovieJukebox 1.0.15 beta
 ------------------------
